included version configs.

--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -40,3 +40,13 @@ long_query_time = 10
 log_output = FILE
 federated
 skip-name-resolve
+
+[mysql-5.5]
+#rpl_semi_sync_master_enabled   = 1
+#rpl_semi_sync_master_timeout   = 10000
+
+[mysql-5.6]
+gtid_mode                     = ON
+disable-gtid-unsafe-statements
+master-info-repository        = TABLE
+relay-log-info-repository     = TABLE
