--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -48,5 +48,6 @@ skip-name-resolve
 [mysql-5.6]
 gtid_mode                     = ON
 disable-gtid-unsafe-statements
+#enforce-gtid-unsafe-statements
 master-info-repository        = TABLE
 relay-log-info-repository     = TABLE
