increased innodb_buffer_pool_size default from 256M to 1024M, updated GTID variables for MySQL 5.6.9 changes.

--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -26,12 +26,12 @@ innodb_log_files_in_group = 2
 innodb_log_file_size = 16M
 innodb_flush_log_at_trx_commit = 1
 innodb_file_per_table = 1
-innodb_buffer_pool_size = 256M
+innodb_buffer_pool_size = 1024M
 innodb_buffer_pool_instances = 4
 innodb_additional_mem_pool_size= 20M
 innodb_log_buffer_size = 8M
 # Don't update info schema on every read. Only when table first opens.
-innodb_stats_on_metadata = 0
+#innodb_stats_on_metadata = 0
 innodb_thread_concurrency = 0 # Old! Leave to 0.
 
 log_queries_not_using_indexes = 1
@@ -47,7 +47,6 @@ skip-name-resolve
 
 [mysql-5.6]
 gtid_mode                     = ON
-disable-gtid-unsafe-statements
-#enforce-gtid-unsafe-statements
+enforce_gtid_consistency
 master-info-repository        = TABLE
 relay-log-info-repository     = TABLE
