--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -26,6 +26,7 @@ innodb_log_files_in_group = 2
 innodb_log_file_size = 16M
 innodb_flush_log_at_trx_commit = 1
 innodb_file_per_table = 1
+innodb_file_format = Barracuda
 innodb_buffer_pool_size = 1024M
 innodb_buffer_pool_instances = 4
 innodb_additional_mem_pool_size= 20M
