--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -33,6 +33,7 @@ innodb_log_buffer_size = 8M
 # Don't update info schema on every read. Only when table first opens.
 #innodb_stats_on_metadata = 0
 innodb_thread_concurrency = 0 # Old! Leave to 0.
+innodb_doublewrite = 1
 
 log_queries_not_using_indexes = 1
 slow_query_log = 1
