mooooor acid! And more sensible readme.

--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -31,8 +31,7 @@ innodb_buffer_pool_size = 1024M
 innodb_buffer_pool_instances = 4
 innodb_additional_mem_pool_size= 20M
 innodb_log_buffer_size = 8M
-# Don't update info schema on every read. Only when table first opens.
-#innodb_stats_on_metadata = 0
+#innodb_stats_on_metadata = 0 # Don't update info schema on every read. Only when table first opens.
 innodb_thread_concurrency = 0 # Old! Leave to 0.
 innodb_doublewrite = 1
 
@@ -42,6 +41,7 @@ long_query_time = 10
 log_output = FILE
 federated
 skip-name-resolve
+skip-slave-start
 
 [mysql-5.5]
 #rpl_semi_sync_master_enabled   = 1
