MySQL 5.6.10 is GA. Finished mysql-5.6 section in config.

--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -48,7 +48,12 @@ skip-slave-start
 #rpl_semi_sync_master_timeout   = 10000
 
 [mysql-5.6]
-gtid_mode                     = ON
-enforce_gtid_consistency
-master-info-repository        = TABLE
-relay-log-info-repository     = TABLE
+gtid-mode = on                            # GTID
+enforce-gtid-consistency = true           # GTID
+master-info-repository = TABLE            # Chrash-safe replication
+relay-log-info-repository = TABLE         # Chrash-safe replication
+slave-parallel-workers = 2                # MTS
+binlog-checksum = CRC32                   # Checksums
+master-verify-checksum = 1                # Checksums
+slave-sql-verify-checksum = 1             # Checksums
+binlog-rows-query-log_events = 1          # Informational logs
