--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -37,6 +37,7 @@ innodb_old_blocks_time = 1000
 log_slave_updates = 1
 binlog-row-event-max-size = 8192
 binlog_format = ROW
+binlog_checksum = CRC32
 
 log_queries_not_using_indexes = 1
 slow_query_log = 1
