--- a/templates/my.cnf
+++ b/templates/my.cnf
@@ -35,6 +35,7 @@ innodb_log_buffer_size = 8M
 innodb_thread_concurrency = 0 # Old! Leave to 0.
 innodb_doublewrite = 1
 
+log_slave_updates
 log_queries_not_using_indexes = 1
 slow_query_log = 1
 long_query_time = 10
