New README, with new instructions. V2 focuses on mariadb and the socket auth plugin.

--- a/configs/client.cnf
+++ b/configs/client.cnf
@@ -1,8 +1,10 @@
 [client]
 show-warnings
+default-character-set = utf8
 
 [mysql]
 show-warnings
+default-character-set = utf8
 
 [mysqldump]
 quick
